--- a/Presentation/Views/CustomerDetailView.xaml
+++ b/Presentation/Views/CustomerDetailView.xaml
@@ -2,7 +2,8 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:local="clr-namespace:Presentation.Views"
       xmlns:viewmodels="clr-namespace:Presentation.ViewModels"
       d:DataContext="{d:DesignInstance Type=viewmodels:CustomerDetailViewModel}"
@@ -29,7 +30,7 @@
                 <Button Content="Customers" Grid.Column="2" Style="{StaticResource NavigationButtonStyle}" Command="{Binding GoToCustomerListCommand}"/>
                 <Button Content="Users" Grid.Column="3" Style="{StaticResource NavigationButtonStyle}" Command="{Binding GoToUserListCommand}"/>
             </Grid>
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="1" Margin="30">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -43,7 +44,7 @@
 
                 <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Customer Details" FontSize="34" Foreground="White" TextAlignment="Center"/>
 
-                <TextBlock Grid.Row="1" Grid.Column="0" Text="Name" FontSize="26" Foreground="White" Margin="10"/>
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="Name" Style="{StaticResource FormLabelText}" Margin="0 40 0 0"/>
                 <TextBlock Grid.Row="2" Grid.Column="0" Text="{Binding CurrentCustomer.CustomerName}" FontSize="26" Foreground="White" Margin="10"/>
 
 
@@ -62,6 +63,12 @@
                                 <TextBlock Grid.Column="0"   Text="{Binding Title}" Style="{StaticResource ListCustomerNameText}"/>
                                 <TextBlock Grid.Column="1"   Text="{Binding Status}" Style="{StaticResource ListCustomerNameText}"/>
 
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseLeftButtonUp">
+                                        <i:InvokeCommandAction Command="{Binding DataContext.GoToProjectDetailCommand, 
+                                            RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding .}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
