--- a/Presentation/Views/ProjectDetailView.xaml
+++ b/Presentation/Views/ProjectDetailView.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:local="clr-namespace:Presentation.Views"
       xmlns:viewmodels="clr-namespace:Presentation.ViewModels"
       d:DataContext="{d:DesignInstance Type=viewmodels:ProjectDetailViewModel}"
@@ -29,7 +30,7 @@
                 <Button Content="Customers" Grid.Column="2" Style="{StaticResource NavigationButtonStyle}" Command="{Binding GoToCustomerListCommand}"/>
                 <Button Content="Users" Grid.Column="3" Style="{StaticResource NavigationButtonStyle}" Command="{Binding GoToUserListCommand}"/>
             </Grid>
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="1" Margin="30">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -43,20 +44,20 @@
 
                 <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Project Details" FontSize="34" Foreground="White" TextAlignment="Center"/>
                 <StackPanel Grid.Row="1" Grid.Column="0" Grid.RowSpan="2">
-                    <TextBlock  Text="Title" FontSize="26" Foreground="White" Margin="10"/>
+                    <TextBlock  Text="Title" Style="{StaticResource FormLabelText}"/>
                     <TextBlock  Text="{Binding CurrentProject.Title}" FontSize="26" Foreground="White" Margin="10"/>
-                    <TextBlock  Text="Description" FontSize="20" Foreground="White" Margin="10"/>
+                    <TextBlock  Text="Description" Style="{StaticResource FormLabelText}"/>
                     <TextBlock  Text="{Binding CurrentProject.Description}" FontSize="18" Foreground="White" Margin="10"/>
-                    <TextBlock  Text="Ordering customer" FontSize="24" Foreground="White" Margin="10"/>
+                    <TextBlock  Text="Ordering customer" Style="{StaticResource FormLabelText}"/>
                     <TextBlock  Text="{Binding CurrentProject.AssociatedCustomer.CustomerName}" FontSize="20" Foreground="White" Margin="10"/>
-                    <TextBlock  Text="Responsible employee" FontSize="24" Foreground="White" Margin="10"/>
+                    <TextBlock  Text="Responsible employee" Style="{StaticResource FormLabelText}"/>
                     <TextBlock  Text="{Binding CurrentProject.AssociatedUser.FullName}" FontSize="20" Foreground="White" Margin="10"/>
-                    <TextBlock  Text="Current status" FontSize="24" Foreground="White" Margin="10"/>
+                    <TextBlock  Text="Current status" Style="{StaticResource FormLabelText}"/>
                     <TextBlock  Text="{Binding CurrentProject.Status}" FontSize="20" Foreground="White" Margin="10"/>
-                    <TextBlock  Text="Start Date" FontSize="18" Foreground="White" Margin="10"/>
-                    <TextBlock  Text="{Binding CurrentProject.StartDate}" FontSize="16" Foreground="White" Margin="10"/>
-                    <TextBlock  Text="End Date" FontSize="18" Foreground="White" Margin="10"/>
-                    <TextBlock  Text="{Binding CurrentProject.EndDate}" FontSize="16" Foreground="White" Margin="10"/>
+                    <TextBlock  Text="Start Date" Style="{StaticResource FormLabelText}"/>
+                    <TextBlock  Text="{Binding CurrentProject.StartDate,StringFormat='yyyy-MM-dd'}" FontSize="16" Foreground="White" Margin="10"/>
+                    <TextBlock  Text="End Date" Style="{StaticResource FormLabelText}"/>
+                    <TextBlock  Text="{Binding CurrentProject.EndDate, StringFormat='yyyy-MM-dd'}" FontSize="16" Foreground="White" Margin="10"/>
 
                 </StackPanel>
 
@@ -77,6 +78,13 @@
                                 <TextBlock Grid.Column="0"   Text="{Binding ProductName}" Style="{StaticResource ListCustomerNameText}"/>
                                 <TextBlock Grid.Column="1"   Text="{Binding Price}" Style="{StaticResource ListCustomerNameText}"/>
                                 <TextBlock Grid.Column="2"   Text=" kr" Style="{StaticResource ListCustomerNameText}"/>
+
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseLeftButtonUp">
+                                        <i:InvokeCommandAction Command="{Binding DataContext.GoToProductDetailCommand, 
+        RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding .}"/>
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
 
                             </Grid>
                         </DataTemplate>
