--- a/Presentation/Views/UserEditView.xaml
+++ b/Presentation/Views/UserEditView.xaml
@@ -29,7 +29,7 @@
                 <Button Content="Customers" Grid.Column="2" Style="{StaticResource NavigationButtonStyle}" Command="{Binding GoToCustomerListCommand}"/>
                 <Button Content="Users" Grid.Column="3" Style="{StaticResource NavigationButtonStyle}" Command="{Binding GoToUserListCommand}"/>
             </Grid>
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="1" Margin="30">
                 <Grid.RowDefinitions>
 
                     <RowDefinition Height="Auto"/>
@@ -62,7 +62,7 @@
                     </TextBox>
                 </Grid>
 
-                <TextBlock Grid.Row="2" Text="{Binding ErrorMessage}" Style="{StaticResource FormErrorText}"/>
+                <TextBlock Grid.Row="2" Text="{Binding FormErrorMessage}" Style="{StaticResource FormErrorText}"/>
 
                 <Grid Grid.Row="3">
                     <Grid.ColumnDefinitions>
