It almost works but i doest. All one to one relationships are working. It seems like it works but changes to Product - even tho they sometimes show in the app - are not being saved correctly to database. I know having a many to many Product-Projects and the way i have handled is the issue. I know it is the products being tracked several times that cause the problem, but i dont know how to fix it without loosing the ability to update a project products alltogether. Solution: each project should have only one product - haha.

--- a/Presentation/Views/ProjectEditView.xaml
+++ b/Presentation/Views/ProjectEditView.xaml
@@ -83,7 +83,7 @@
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
                                     <CheckBox IsChecked="{Binding isSelected}" 
-                      Command="{Binding DataContext.ProductSelectionChangedCommand, RelativeSource={RelativeSource AncestorType=Window}}" 
+                      Command="{Binding DataContext.ProductSelectionChangedCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
                       CommandParameter="{Binding}" />
                                     <TextBlock Text="{Binding ProductName}" VerticalAlignment="Center" Margin="5,0"/>
                                 </StackPanel>
